Fix navbar title and menu button interleaving each other on small screens

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -165,3 +165,7 @@ div.dropdown {
     min-width: 10em;
     z-index: 1;
 }
+
+.navbar-toggler-right {
+  right: -3rem;
+}
